--- a/docs/main.yaml
+++ b/docs/main.yaml
@@ -329,6 +329,123 @@ paths:
         '404':
           description: Post o tags no encontrados
 
+  /posts/{id}/images:
+    get:
+      tags:
+        - Posts
+      summary: Obtener imágenes de un post
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: integer
+          description: ID del post
+      responses:
+        '200':
+          description: Imágenes del post obtenidas correctamente
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  images:
+                    type: array
+                    items:
+                      type: object
+                      properties:
+                        id:
+                          type: integer
+                          example: 1
+                        url:
+                          type: string
+                          example: "https://example.com/image1.jpg"
+                        createdAt:
+                          type: string
+                          format: date-time
+        '404':
+          description: Post no encontrado
+        '500':
+          description: Error interno del servidor
+
+    post:
+      tags:
+        - Posts
+      summary: Agregar imágenes a un post
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: integer
+          description: ID del post
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                images:
+                  type: array
+                  items:
+                    type: string
+                  example: ["https://example.com/image1.jpg", "https://example.com/image2.jpg"]
+      responses:
+        '201':
+          description: Imágenes agregadas correctamente
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: "Imágenes agregadas correctamente"
+                  images:
+                    type: array
+                    items:
+                      $ref: '#/components/schemas/PostImage'
+        '400':
+          description: Datos inválidos
+        '404':
+          description: Post no encontrado
+        '500':
+          description: Error interno del servidor
+
+  /posts/{id}/images/{imageId}:
+    delete:
+      tags:
+        - Posts
+      summary: Eliminar una imagen específica de un post
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: integer
+          description: ID del post
+        - name: imageId
+          in: path
+          required: true
+          schema:
+            type: integer
+          description: ID de la imagen
+      responses:
+        '200':
+          description: Imagen eliminada correctamente
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: "Imagen eliminada correctamente"
+        '404':
+          description: Post o imagen no encontrados
+        '500':
+          description: Error interno del servidor
 
   /tags:
     get:
@@ -600,11 +717,34 @@ components:
             type: integer
           description: Array opcional de IDs de tags
           example: [1, 2, 3]
+        images:
+          type: array
+          items:
+            type: string
+            format: uri
+          description: Array opcional de URLs de imágenes
+          example: ["https://example.com/imagen1.jpg", "https://example.com/imagen2.jpg"]
 
     PostList:
       type: array
       items:
         $ref: '#/components/schemas/Post'
+
+    PostImage:
+      type: object
+      properties:
+        id:
+          type: integer
+        postId:
+          type: integer
+        url:
+          type: string
+        createdAt:
+          type: string
+          format: date-time
+        updatedAt:
+          type: string
+          format: date-time
 
     Tag:
       type: object
