--- a/docs/main.yaml
+++ b/docs/main.yaml
@@ -130,13 +130,56 @@ paths:
       tags:
         - Posts
       summary: Obtener todos los posts
+      description: Devuelve los posts con paginación. Incluye imágenes y tags asociados.
+      parameters:
+        - name: page
+          in: query
+          schema:
+            type: integer
+            minimum: 1
+            default: 1
+          description: Número de página (empezando en 1)
+        - name: limit
+          in: query
+          schema:
+            type: integer
+            minimum: 1
+            maximum: 100
+            default: 10
+          description: Cantidad de posts por página (máximo 100)
       responses:
         "200":
           description: Lista de posts
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/PostList'
+                type: object
+                properties:
+                  posts:
+                    type: array
+                    items:
+                      $ref: '#/components/schemas/Post'
+                  pagination:
+                    type: object
+                    properties:
+                      page:
+                        type: integer
+                        example: 1
+                      limit:
+                        type: integer
+                        example: 10
+                      total:
+                        type: integer
+                        example: 25
+                      pages:
+                        type: integer
+                        example: 3
+                      hasNext:
+                        type: boolean
+                        example: true
+                      hasPrev:
+                        type: boolean
+                        example: false
         "500":
           description: Error al obtener los posts
     post:
